@@ -1,16 +1,14 @@
 package org.trypticon.pdn.paintdotnet.composite;
 
-import java.awt.AlphaComposite;
-
 /**
- * Custom composite operation for XOR.
+ * Custom composite operation for Color Dodge.
  *
- * Because {@link AlphaComposite#Xor} somehow gives the wrong result compared to Paint.NET.
+ * Divides the bottom layer by the inverted top layer.
  */
-public class XorComposite extends AbstractComposite {
-    public static final XorComposite INSTANCE = new XorComposite();
+public class ColorDodgeComposite extends AbstractComposite {
+    public static final ColorDodgeComposite INSTANCE = new ColorDodgeComposite();
 
-    private XorComposite() {
+    private ColorDodgeComposite() {
     }
 
     @Override
@@ -25,10 +23,10 @@ public class XorComposite extends AbstractComposite {
         int dstInA = dstInPixels[off + 3];
 
         // Blend logic here
-        int dstOutR = dstInR ^ srcR;
-        int dstOutG = dstInG ^ srcG;
-        int dstOutB = dstInB ^ srcB;
-        int dstOutA = clamp(srcA + dstInA - (srcA * dstInA) / 255);
+        int dstOutR = clampedDivide(dstInR, invert(srcR));
+        int dstOutG = clampedDivide(dstInG, invert(srcG));
+        int dstOutB = clampedDivide(dstInB, invert(srcB));
+        int dstOutA = clampedDivide(dstInA, invert(srcA));
 
         dstOutPixels[off] = dstOutR;
         dstOutPixels[off + 1] = dstOutG;
