@@ -1,7 +1,11 @@
 
 ?
 
-- Support for Multiply, Additive blend ops
+- Support for more blend ops:
+    - Multiply
+    - Additive
+    - Color Burn
+    - Color Dodge
 - Support for `ClassWithMembers` and `SystemClassWithMembers` (thanks @dalgarins)
 - Bugfix: support for default blend mode when omitted (thanks @dalgarins)
 - Bugfix: get correct `BufferedImage` width and height (thanks @dalgarins)
